package br.com.caio.padroes.estruturais.facade;

public class SubsystemA {
    public void operationA() {
        System.out.println("Operação A do SubsystemA");
    }
}