package br.com.caio.padroes.estruturais.facade;

public class SubsystemB {
    public void operationB() {
        System.out.println("Operação B do SubsystemB");
    }
}