package br.com.caio.padroes.estruturais.facade;

public class SubsystemC {
    public void operationC() {
        System.out.println("Operação C do SubsystemC");
    }
}